--- a/blog-api/src/main/resources/application-dev.properties
+++ b/blog-api/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-server.port=8090
+server.port=8888
 
 blog.name=Naccl's Blog
 # \u751F\u4EA7\u73AF\u5883\u9700\u8981\u4FEE\u6539\u4E3A\u670D\u52A1\u5668ip\u6216\u57DF\u540D
@@ -10,13 +10,13 @@ blog.cms=http://localhost:8080
 blog.view=http://localhost:8081
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/nblog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://47.111.83.47:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
-spring.redis.host=192.168.17.132
+spring.redis.host=47.111.83.47
 spring.redis.password=123456
-spring.redis.port=6379
+spring.redis.port=6380
 spring.redis.database=0
 spring.redis.timeout=10000ms
 
