--- a/blog-cms/package.json
+++ b/blog-cms/package.json
@@ -14,9 +14,9 @@
     "cos-js-sdk-v5": "^1.4.10",
     "echarts": "4.9.0",
     "element-ui": "2.13.2",
-    "lodash": "4.17.19",
+    "lodash": "^4.17.21",
     "mavon-editor": "2.9.1",
-    "moment": "2.27.0",
+    "moment": "^2.29.4",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "v-viewer": "1.5.1",
