--- a/blog-platform/blog-config/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-config/src/main/resources/bootstrap.properties
@@ -1,5 +1,9 @@
-server.port=8001
-spring.application.name=blog-user
+server.port=8000
+spring.application.name=blog-config
+# 指定配置方式是数据库,配置config的重点
+spring.profiles.active=jdbc
+# 指定获取配置项的sql
+spring.cloud.config.server.jdbc.sql=select `key`,value from config where application=? and profile=? and label=?
 
 # 数据库连接配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -7,24 +11,15 @@ spring.datasource.url=jdbc:mysql://47.111.83.47:3306/blog?useUnicode=true&charac
 spring.datasource.username=root
 spring.datasource.password=123456
 
-#JPA
-spring.jpa.database=mysql
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
-# redis配置
-spring.redis.host=47.111.83.47
-spring.redis.password=123456
-spring.redis.port=6380
-spring.redis.database=0
-spring.redis.timeout=10000ms
 
 # Flyway配置
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 spring.flyway.baseline-description=baseline init
 # 当迁移时发现目标schema非空，而且带有没有元数据的表时，是否自动执行基准迁移，默认false.
 spring.flyway.baseline-on-migrate=true
 # 指定Flyway扫描数据库脚本的路径
 spring.flyway.locations=classpath:db/migration/
 # metadata版本控制信息表,默认flyway_schema_history
-spring.flyway.table=flyway_history_table_${spring.application.name}
+spring.flyway.table=flyway_history_table_blog-config
+
