--- a/blog-platform/blog-user/pom.xml
+++ b/blog-platform/blog-user/pom.xml
@@ -23,5 +23,9 @@
             <artifactId>blog_common</artifactId>
             <version>BLOG-1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
     </dependencies>
 </project>
