--- a/blog-platform/blog_common/pom.xml
+++ b/blog-platform/blog_common/pom.xml
@@ -55,6 +55,10 @@
       <version>2.6.5</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>jakarta.validation</groupId>
+          <artifactId>jakarta.validation-api</artifactId>
+      </dependency>
 
   </dependencies>
 </project>
