--- a/blog-platform/blog-config/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-config/src/main/resources/bootstrap.properties
@@ -14,12 +14,11 @@ spring.datasource.password=123456
 
 
 # Flyway配置
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.baseline-description=baseline init
 # 当迁移时发现目标schema非空，而且带有没有元数据的表时，是否自动执行基准迁移，默认false.
 spring.flyway.baseline-on-migrate=true
 # 指定Flyway扫描数据库脚本的路径
 spring.flyway.locations=classpath:db/migration/
 # metadata版本控制信息表,默认flyway_schema_history
-spring.flyway.table=flyway_history_table_blog-config
-
+spring.flyway.table=flyway_history_table_${spring.application.name}
