--- a/blog-platform/blog-user/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-user/src/main/resources/bootstrap.properties
@@ -1,24 +1,27 @@
 server.port=8001
 spring.application.name=blog-user
-#指定配置方式是本地文件
+#指定配置方式是dev那个
 spring.profiles.active=dev
+
 #配置 配置中心的ip和端口
 spring.cloud.config.uri=http://localhost:8000
 spring.cloud.config.profile=dev
+spring.cloud.config.fail-fast=true
+#第一次失败，延迟多久重试
+spring.cloud.config.retry.initial-interval=1000
+# 每次重试时间是之前的倍数
+spring.cloud.config.retry.multiplier=1.3
+#最多重试次数
+spring.cloud.config.retry.max-attempts=6
+#最大重试间隔
+spring.cloud.config.retry.max-interval=3000
 
-## redis配置
-#spring.redis.host=47.111.83.47
-#spring.redis.password=123456
-#spring.redis.port=6380
-#spring.redis.database=0
-#spring.redis.timeout=10000ms
-#
-## Flyway配置
-#spring.flyway.enabled=false
-#spring.flyway.baseline-description=baseline init
-## 当迁移时发现目标schema非空，而且带有没有元数据的表时，是否自动执行基准迁移，默认false.
-#spring.flyway.baseline-on-migrate=true
-## 指定Flyway扫描数据库脚本的路径
-#spring.flyway.locations=classpath:db/migration/
-## metadata版本控制信息表,默认flyway_schema_history
-#spring.flyway.table=flyway_history_table_${spring.application.name}
+# Flyway配置
+spring.flyway.enabled=false
+spring.flyway.baseline-description=baseline init
+# 当迁移时发现目标schema非空，而且带有没有元数据的表时，是否自动执行基准迁移，默认false.
+spring.flyway.baseline-on-migrate=true
+# 指定Flyway扫描数据库脚本的路径
+spring.flyway.locations=classpath:db/migration/
+# metadata版本控制信息表,默认flyway_schema_history
+spring.flyway.table=flyway_history_table_${spring.application.name}
