--- a/blog-platform/blog-config/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-config/src/main/resources/bootstrap.properties
@@ -1,9 +1,16 @@
 server.port=8000
 spring.application.name=blog-config
-# 指定配置方式是数据库,配置config的重点
+# 为spring读取的配置文件名，从数据库中读取，必须为jdbc
 spring.profiles.active=jdbc
+
+
+#读取的配置的分支，这个需要在数据库中数据对应
+spring.cloud.config.label=master
+spring.cloud.config.profile=dev
 # 指定获取配置项的sql
 spring.cloud.config.server.jdbc.sql=select `key`,value from config where application=? and profile=? and label=?
+spring.cloud.config.server.jdbc.order=0
+spring.cloud.config.server.default-label=master
 
 # 数据库连接配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
