--- a/blog-platform/blog-user/pom.xml
+++ b/blog-platform/blog-user/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>blog_common</artifactId>
             <version>BLOG-1.0.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <!-- spring cloud config 客户端 -->
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
     </dependencies>
 </project>
