--- a/blog-platform/blog-user/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-user/src/main/resources/bootstrap.properties
@@ -1,12 +1,13 @@
 server.port=8001
 spring.application.name=blog-user
 #指定配置方式是dev那个
-spring.profiles.active=dev
+#spring.profiles.active=dev
+
 
 #配置 配置中心的ip和端口
 spring.cloud.config.uri=http://localhost:8000
+spring.cloud.config.label=master
 spring.cloud.config.profile=dev
-spring.cloud.config.fail-fast=true
 #第一次失败，延迟多久重试
 spring.cloud.config.retry.initial-interval=1000
 # 每次重试时间是之前的倍数
@@ -15,6 +16,7 @@ spring.cloud.config.retry.multiplier=1.3
 spring.cloud.config.retry.max-attempts=6
 #最大重试间隔
 spring.cloud.config.retry.max-interval=3000
+
 
 # Flyway配置
 spring.flyway.enabled=false
