--- a/blog-platform/blog_common/pom.xml
+++ b/blog-platform/blog_common/pom.xml
@@ -11,6 +11,11 @@
 
   <dependencies>
     <dependency>
+      <!-- spring cloud config 客户端 -->
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.auth0</groupId>
       <artifactId>java-jwt</artifactId>
       <version>3.10.3</version>
