--- a/blog-platform/blog-gateway/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-gateway/src/main/resources/bootstrap.properties
@@ -1,6 +1,7 @@
 server.port=8888
 spring.application.name=blog-gateway
-
+#注册中心nacos地址
+spring.cloud.nacos.discovery.server-addr=47.111.83.47:8848
 
 #配置 配置中心的ip和端口
 spring.cloud.config.uri=http://localhost:8000
