--- a/blog-platform/blog-config/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-config/src/main/resources/bootstrap.properties
@@ -2,7 +2,8 @@ server.port=8000
 spring.application.name=blog-config
 # 为spring读取的配置文件名，从数据库中读取，必须为jdbc
 spring.profiles.active=jdbc
-
+#注册中心nacos地址
+spring.cloud.nacos.discovery.server-addr=47.111.83.47:8848
 
 #读取的配置的分支，这个需要在数据库中数据对应
 spring.cloud.config.label=master
