--- a/blog-platform/blog-gateway/pom.xml
+++ b/blog-platform/blog-gateway/pom.xml
@@ -22,6 +22,18 @@
             <groupId>com.heyufei</groupId>
             <artifactId>blog_common</artifactId>
             <version>BLOG-1.0.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <!-- gateway 本身已经包含了spring mvc的功能，就导致冲突了 -->
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <!--新增gateway,要排除其他依赖的spring-boot-starter-web,因为会与gateway的webflux冲突-->
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
 
