--- a/blog-platform/blog-user/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-user/src/main/resources/bootstrap.properties
@@ -1,7 +1,14 @@
 server.port=8001
+server.servlet.context-path=/user
 spring.application.name=blog-user
-#指定配置方式是dev那个
-#spring.profiles.active=dev
+spring.profiles.active=dev
+#注册中心nacos地址
+spring.cloud.nacos.discovery.server-addr=http://47.111.83.47:8848
+##配置中心地址
+#spring.cloud.nacos.config.server-addr=http://47.111.83.47:8848
+#spring.cloud.nacos.config.file-extension=properties
+#spring.cloud.nacos.config.group=DEFAULT_GROUP
+##spring.cloud.nacos.config.namespace=
 
 
 #配置 配置中心的ip和端口
@@ -16,7 +23,8 @@ spring.cloud.config.retry.multiplier=1.3
 spring.cloud.config.retry.max-attempts=6
 #最大重试间隔
 spring.cloud.config.retry.max-interval=3000
-
+#暴露 所有端点，通过post方法/actuator/refresh刷新本客户端所有配置
+management.endpoints.web.exposure.include=*
 
 # Flyway配置
 spring.flyway.enabled=false
