--- a/blog-platform/blog-gateway/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-gateway/src/main/resources/bootstrap.properties
@@ -1,7 +1,8 @@
 server.port=8888
+server.servlet.context-path=/api/v1
 spring.application.name=blog-gateway
 #注册中心nacos地址
-spring.cloud.nacos.discovery.server-addr=47.111.83.47:8848
+spring.cloud.nacos.discovery.server-addr=http://47.111.83.47:8848
 
 #配置 配置中心的ip和端口
 spring.cloud.config.uri=http://localhost:8000
@@ -15,6 +16,8 @@ spring.cloud.config.retry.multiplier=1.3
 spring.cloud.config.retry.max-attempts=6
 #最大重试间隔
 spring.cloud.config.retry.max-interval=3000
+#暴露 所有端点，通过post方法/actuator/refresh刷新本客户端所有配置
+management.endpoints.web.exposure.include=*
 
 
 # Flyway配置
