--- a/blog-platform/blog-config/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-config/src/main/resources/bootstrap.properties
@@ -4,6 +4,8 @@ spring.application.name=blog-config
 spring.profiles.active=jdbc
 #注册中心nacos地址
 spring.cloud.nacos.discovery.server-addr=47.111.83.47:8848
+spring.cloud.nacos.discovery.username=nacos
+spring.cloud.nacos.discovery.password=nacos
 
 #读取的配置的分支，这个需要在数据库中数据对应
 spring.cloud.config.label=master
