--- a/blog-platform/blog-user/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-user/src/main/resources/bootstrap.properties
@@ -3,6 +3,8 @@ server.servlet.context-path=/user
 spring.application.name=blog-user
 #注册中心nacos地址
 spring.cloud.nacos.discovery.server-addr=http://47.111.83.47:8848
+#spring.cloud.nacos.discovery.username=blog
+#spring.cloud.nacos.discovery.password=heyufei
 
 #配置 配置中心的ip和端口
 spring.cloud.config.uri=http://localhost:8000
