[修改]修改ip地址，去掉nacos

--- a/blog-platform/blog-config/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-config/src/main/resources/bootstrap.properties
@@ -3,9 +3,9 @@ spring.application.name=blog-config
 # 为spring读取的配置文件名，从数据库中读取，必须为jdbc
 spring.profiles.active=jdbc
 #注册中心nacos地址
-spring.cloud.nacos.discovery.server-addr=47.111.83.47:8848
-spring.cloud.nacos.discovery.username=nacos
-spring.cloud.nacos.discovery.password=nacos
+#spring.cloud.nacos.discovery.server-addr=192.168.10.131:8848
+#spring.cloud.nacos.discovery.username=nacos
+#spring.cloud.nacos.discovery.password=nacos
 
 #读取的配置的分支，这个需要在数据库中数据对应
 spring.cloud.config.label=master
@@ -17,7 +17,7 @@ spring.cloud.config.server.default-label=master
 
 # 数据库连接配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.111.83.47:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://192.168.10.131:3306/blog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=123456
 
