--- a/blog-platform/blog-gateway/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-gateway/src/main/resources/bootstrap.properties
@@ -2,22 +2,22 @@ server.port=8888
 server.servlet.context-path=/api/v1
 spring.application.name=blog-gateway
 #注册中心nacos地址
-spring.cloud.nacos.discovery.server-addr=http://47.111.83.47:8848
+#spring.cloud.nacos.discovery.server-addr=http://192.168.10.131:8848
 
-#配置 配置中心的ip和端口
-spring.cloud.config.uri=http://localhost:8000
-spring.cloud.config.label=master
-spring.cloud.config.profile=dev
-#第一次失败，延迟多久重试
-spring.cloud.config.retry.initial-interval=1000
-# 每次重试时间是之前的倍数
-spring.cloud.config.retry.multiplier=1.3
-#最多重试次数
-spring.cloud.config.retry.max-attempts=6
-#最大重试间隔
-spring.cloud.config.retry.max-interval=3000
-#暴露 所有端点，通过post方法/actuator/refresh刷新本客户端所有配置
-management.endpoints.web.exposure.include=*
+##配置 配置中心的ip和端口
+#spring.cloud.config.uri=http://localhost:8000
+#spring.cloud.config.label=master
+#spring.cloud.config.profile=dev
+##第一次失败，延迟多久重试
+#spring.cloud.config.retry.initial-interval=1000
+## 每次重试时间是之前的倍数
+#spring.cloud.config.retry.multiplier=1.3
+##最多重试次数
+#spring.cloud.config.retry.max-attempts=6
+##最大重试间隔
+#spring.cloud.config.retry.max-interval=3000
+##暴露 所有端点，通过post方法/actuator/refresh刷新本客户端所有配置
+#management.endpoints.web.exposure.include=*
 
 
 # Flyway配置
