--- a/blog-platform/blog-user/src/main/resources/bootstrap.properties
+++ b/blog-platform/blog-user/src/main/resources/bootstrap.properties
@@ -2,7 +2,7 @@ server.port=8001
 server.servlet.context-path=/user
 spring.application.name=blog-user
 #注册中心nacos地址
-spring.cloud.nacos.discovery.server-addr=http://47.111.83.47:8848
+#spring.cloud.nacos.discovery.server-addr=http://192.168.10.131:8848
 #spring.cloud.nacos.discovery.username=blog
 #spring.cloud.nacos.discovery.password=heyufei
 
