--- a/blog-platform/blog-config/pom.xml
+++ b/blog-platform/blog-config/pom.xml
@@ -41,5 +41,42 @@
 
     </dependencies>
 
+    <build>
+        <!-- 项目最终打包成的名字 -->
+        <finalName>community</finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <!-- 指定启动类 -->
+                        <manifest>
+                            <mainClass>com.heyufei.config.ConfigApplication</mainClass>
+                        </manifest>
+                    </archive>
+                    <!-- 指定启动类 -->
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+
+                <!-- 相当于在执行 package 打包时，在后面加上 assembly:single  -->
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+    </build>
+
+
 
 </project>
